# sd

./: build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/op/dm/: Utils.java
app/src/main/java/org/opencv/samples/tutorial2/: DetectActitvity.kt  Tutorial1Activity.java
app/src/main/res/layout/: tutorial1_surface_view.xml
openCVLibrary/: CMakeLists.txt  build.gradle
openCVLibrary/src/main/: AndroidManifest.xml
openCVLibrary/src/main/cpp/: Util.h  jni_part.cpp  total_flow.cc  total_flow.h
openCVLibrary/src/main/cpp/bridge/: CMakeLists.txt  Result2U3D.java  Settingsu3D2Dms.java  result2u3d.pb.cc  result2u3d.pb.h  settingsu3d2dms.pb.cc  settingsu3d2dms.pb.h  trans_result.cc  trans_result.h
openCVLibrary/src/main/cpp/notcompile/: main.cpp
openCVLibrary/src/main/cpp/src/algorithm/: CMakeLists.txt
openCVLibrary/src/main/cpp/src/algorithm/align/: CMakeLists.txt
openCVLibrary/src/main/cpp/src/algorithm/faceid/: faceid_ncnn.cpp  faceid_ncnn.h
openCVLibrary/src/main/cpp/src/algorithm/gaze_tracking/: Nrmal.cc  Nrmal.h  gaze_predict.cc  gaze_predict.h
openCVLibrary/src/main/cpp/src/algorithm/head_pose/: head_pose_estimator.cc  head_pose_estimator.h  steady_pose.cc  steady_pose.h
openCVLibrary/src/main/cpp/src/algorithm/landmark/: CMakeLists.txt
openCVLibrary/src/main/cpp/src/algorithm/landmark/fast-rcnn/: shape_predict.cc  shape_predict.h
openCVLibrary/src/main/cpp/src/algorithm/landmark/tvm/: shape_predict.cc  shape_predict.h
openCVLibrary/src/main/cpp/src/algorithm/object_detection/: CMakeLists.txt
openCVLibrary/src/main/cpp/src/algorithm/object_detection/rcnn/: object_detection.cc
openCVLibrary/src/main/cpp/src/algorithm/object_detection/tvm/: object_detection.cc  object_detection.h
openCVLibrary/src/main/cpp/src/algorithm/utilities/: transform.cpp
openCVLibrary/src/main/cpp/src/dsm_strategy/: CMakeLists.txt  config_tracker.cc  config_tracker.h  eye_mouth_plus.cc  eye_mouth_plus.h  head_pose_states.cc  head_pose_states.h  judger.cc  judger.h
openCVLibrary/src/main/cpp/src/dsm_strategy/utils/: CMakeLists.txt
openCVLibrary/src/main/cpp/src/dsm_strategy/utils/file/: config.cc  config.h  file_read_write_utils.cc  file_system.cc  system_config.cc  system_config.h  text_table_file.cc  text_table_file.h
openCVLibrary/src/main/cpp/src/dsm_strategy/utils/time/: time_stamp.cc  time_stamp.h  timer.cc  timer.h
openCVLibrary/src/main/java/com/ut/sdk/: DetectListner.java  DmsInfoGetter.java  InitializeListener.java  Utils.java  WarningInfo.java
openCVLibrary/src/main/java/com/ut/sdk/exceptions/: CalibrationBeforeDetectException.java  DetectBeforeInitializedException.java  DetectListnerNotFoundException.java  NotLoadedException.java
